Wizar login & styling

--- a/webroot/css/the-big-picture.css
+++ b/webroot/css/the-big-picture.css
@@ -15,7 +15,9 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 600px;
+  height: auto;
+  min-height: 100vh;
+  padding-bottom: 10em;
 }
 
 
