--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -3,15 +3,22 @@
 }
 
 .logo-tnm {
-  height: 120px;
+  height: 60px;
+  width: 10%;
 }
+
+.logo-tnm img {
+  height: 60px;
+  width: auto;
+  margin: 20px auto 0 auto !important;
+}
+
 
 .text-tnm {
   color: #616161;
   font-family: "SoberanaSans-Bold" !important;
   font-size: 20px !important;
   line-height: 28px;
-  padding-top: 20px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -22,13 +29,14 @@
 
 .logo-itt {
   display: table-row;
-  height: 120px !important;
+  height: 60px !important;
   vertical-align: middle !important;
   width: auto;
 }
 
 .logo-itt img {
-  height: 100px !important;
+  height: 60px;
+  width: auto;
   margin: 20px auto 0 auto !important;
 }
 
@@ -39,7 +47,7 @@
   }
 
   .logo-tnm img {
-    height: 80px !important;
+    height: 60px !important;
     margin: 20px auto 0 auto !important;
   }
   .text-tnm       { width: 60%; padding-top: 15px; margin-top: -20px !important; }
