--- a/webroot/css/the-big-picture.css
+++ b/webroot/css/the-big-picture.css
@@ -4,6 +4,23 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
+.link-forgot-password {
+    font-family: /* Roman */ Source Sans Pro, Helvetica, Arial, sans-serif, /* CJK */ Hiragino Kaku Gothic Pro, Meiryo, Hiragino Sans GB W3, /* Arabic */ Noto Naskh Arabic, Droid Arabic Naskh, Geeza Pro, Simplified Arabic, /* Thai */ Noto Sans Thai, Thonburi, Dokchampa, Droid Sans Thai, /* Sans Fallbacks */ Droid Sans Fallback, -apple-system, '.SFNSDisplay-Regular', /* CJK Fallbacks */ Heiti SC, Microsoft Yahei, Segoe UI;
+    line-height: 16px;
+    text-decoration: underline;
+    font-weight: 400;
+    color: #FFF;
+    font-size: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 0 10px 0 20px;
+}
+
 .navbar {
   margin-bottom: 0px;
 }
@@ -32,7 +49,7 @@
 }
 
 .breath {
-  margin-top: 25px;
+  margin-top: 10px;
 }
 
 #register h3 { margin: 5px 0px 25px 0px;}
